test_case/rust-lang_rust/72273_633266831_1.rs

    //~^ ERROR expected trait, found local variable `bar`
